force-app/main/default/objects/Tech_Firm__c/Tech_Firm__c.object-meta.xml
<CustomObject>
    <label>Tech Firm</label>
    <nameField>
        <label>Tech Firm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tech Firms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>