force-app/main/default/objects/Tech_Firm__c/fields/Min_Salary__c.field-meta.xml
<CustomField>
    <fullName>Min_Salary__c</fullName>
    <label>Min Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>