force-app/main/default/objects/Tech_Firm__c/fields/Total_Salary_of_Employee__c.field-meta.xml
<CustomField>
    <fullName>Total_Salary_of_Employee__c</fullName>
    <label>Total Salary of Employee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>